feat: full SEO implementation — react-helmet-async, per-page titles/descriptions/keywords on all 15 pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,21 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>SKYFLIXER</title>
-  <meta name="description" content="SKYFLIXER Streaming App" />
-  <meta name="author" content="SKYFLIXER" />
+
+  <!-- Primary Meta Tags -->
+  <title>Skyflixer — Free Movies, TV Shows & Anime in Full HD</title>
+  <meta name="title" content="Skyflixer — Free Movies, TV Shows & Anime in Full HD" />
+  <meta name="description"
+    content="Watch unlimited movies, TV shows & anime in full 1080p HD — completely free. No signup required. Stream the latest releases, trending titles & classics on Skyflixer." />
+  <meta name="keywords"
+    content="Skyflixer, free movies online, watch movies free, free TV shows, stream movies free, 1080p movies, full HD movies, FHD streaming, watch series online free, free anime streaming, latest movies 2025, trending movies, Hollywood movies free, Bollywood movies online, watch anime free, free movie streaming site, HD movies online, stream TV shows free, new movies online, best free streaming site" />
+  <meta name="author" content="Skyflixer" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#0a0a0a" />
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
 
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="SKYFLIXER" />
-  <meta property="og:description" content="SKYFLIXER Streaming App" />
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://skyflixer.netlify.app/" />
+  <meta property="og:title" content="Skyflixer — Free Movies, TV Shows & Anime in Full HD" />
+  <meta property="og:description"
+    content="Watch unlimited movies, TV shows & anime in full 1080p HD — completely free. No signup required. Stream trending titles & classics." />
   <meta property="og:image" content="/og-image.png" />
+  <meta property="og:site_name" content="Skyflixer" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@SKYFLIXER" />
+  <meta name="twitter:url" content="https://skyflixer.netlify.app/" />
+  <meta name="twitter:title" content="Skyflixer — Free Movies, TV Shows & Anime in Full HD" />
+  <meta name="twitter:description"
+    content="Watch unlimited movies, TV shows & anime in full 1080p HD — completely free. No signup required. Stream trending titles & classics." />
   <meta name="twitter:image" content="/og-image.png" />
+  <meta name="twitter:site" content="@Skyflixer" />
 </head>
 
 <body>
