--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
   <meta name="theme-color" content="#0a0a0a" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/favicon.png" />
+  <meta name="google-site-verification" content="EgpKPLykzaBtW6LxnylkJYpk6uAOfou6q4hnI_81wEE" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
